# hydro-om-copilot

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.prod.yml  docker-compose.yml  todo.md
backend/: Dockerfile  Dockerfile.centos  pyproject.toml
backend/app/: config.py  main.py
backend/app/agents/: auto_diagnosis.py  graph.py  image_agent.py  reasoning.py  report_gen.py  retrieval.py  sensor_reader.py  state.py  symptom_parser.py
backend/app/api/: deps.py
backend/app/models/: request.py  response.py
backend/app/rag/: bm25_index.py  chunker.py  document_loader.py  hybrid_retriever.py  vectorstore.py
backend/app/services/: auto_diagnosis_service.py
backend/app/store/: diagnosis_store.py
backend/app/utils/: anthropic_client.py  llm_factory.py  prompts.py  session_log.py  streaming.py
backend/knowledge_base/vector_store/: bm25_case.pkl  bm25_procedure.pkl  bm25_rule.pkl  chroma.sqlite3
backend/mcp_servers/: fault_aggregator.py
backend/mcp_servers/bearing_sensor/: server.py
backend/mcp_servers/governor_sensor/: server.py
backend/mcp_servers/shared/: pseudo_random.py  schemas.py  symptom_corpus.py  thresholds.py
backend/mcp_servers/vibration_sensor/: server.py
backend/tests/: conftest.py
backend/tests/test_agents/: test_graph.py  test_symptom_parser.py
backend/tests/test_api/: test_auto_diagnosis_api.py  test_diagnosis.py
backend/tests/test_auto_diagnosis/: test_auto_diagnosis_runner.py  test_auto_diagnosis_service.py  test_diagnosis_store.py
backend/tests/test_mcp_sensors/: test_fault_aggregator.py  test_pseudo_random.py  (+1 more)
(+170 files in other folders)
