[project]
name = "hydro-om-copilot-backend"
version = "0.1.0"
description = "Hydro O&M Copilot — FastAPI + LangGraph backend"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.12",
    # LLM / Agent orchestration
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-community>=0.3.0",
    "langgraph>=0.2.0",
    # Vector store
    "chromadb>=0.5.0",
    # Embeddings (local BGE)
    "sentence-transformers>=3.0.0",
    # BM25
    "rank-bm25>=0.2.2",
    "jieba>=0.42.1",
    # Reranker
    "FlagEmbedding>=1.2.0",
    # Document parsing
    "python-frontmatter>=1.1.0",
    "pyyaml>=6.0",
    # Image processing (OCR)
    "Pillow>=10.0.0",
    "pytesseract>=0.3.13",
    # Config
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.0",
    # HTTP async
    "httpx>=0.27.0",
    "sse-starlette>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
